(Backend):created models and routes for all tasks & categories

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <!-- Give your app a swell name -->
-  <title>Happy App Title!</title>
+  <title>A Todo App!</title>
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   
   <!-- Our js bundle will be in 'bundle.js' -->
   <!-- The 'defer' attribute will ensure that it is run only after the DOM finishes loading -->
