--- a/public/index.html
+++ b/public/index.html
@@ -14,14 +14,16 @@
   <title>A Todo App!</title>
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="style.css">
+  
+</head>
+<body>
+  <div id="app"></div>
+  <!-- We will render our React app into a div with an id of 'app' -->
+  <!-- We can grab it off the DOM by saing `document.getElementById('app');` -->
   
   <!-- Our js bundle will be in 'bundle.js' -->
   <!-- The 'defer' attribute will ensure that it is run only after the DOM finishes loading -->
   <script src="/bundle.js" defer></script>
-</head>
-<body>
-  <!-- We will render our React app into a div with an id of 'app' -->
-  <!-- We can grab it off the DOM by saing `document.getElementById('app');` -->
-  <div id="app"></div>
 </body>
 </html>
